@@ -4,6 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>java-21</artifactId>
+   <name>java-21</name>
 
    <parent>
       <groupId>cn.tuyucheng.taketoday.java-core-modules</groupId>
@@ -11,55 +12,36 @@
       <version>1.0.0</version>
    </parent>
 
-   <dependencies>
-      <dependency>
-         <groupId>com.h2database</groupId>
-         <artifactId>h2</artifactId>
-         <version>2.1.214</version>
-      </dependency>
-      <dependency>
-         <groupId>com.google.code.gson</groupId>
-         <artifactId>gson</artifactId>
-         <version>2.10.1</version>
-      </dependency>
-   </dependencies>
-
    <build>
       <plugins>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>${maven-compiler-plugin.version}</version>
             <configuration>
+               <source>21</source>
+               <target>21</target>
+               <!-- Needed due to a bug with JDK 21, described here: https://issues.apache.org/jira/browse/MCOMPILER-546?page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel&focusedCommentId=17767513 -->
+               <debug>false</debug>
                <compilerArgs>
                   <arg>--enable-preview</arg>
-                  <arg>--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED</arg>
                </compilerArgs>
-               <source>${maven.compiler.source}</source>
-               <target>${maven.compiler.target}</target>
-               <showDeprecation>true</showDeprecation>
-               <showWarnings>true</showWarnings>
             </configuration>
          </plugin>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.1.2</version>
             <configuration>
-               <argLine>@{argLine} --enable-preview
-                  --add-exports=java.base/jdk.internal.vm=ALL-UNNAMED
-               </argLine>
-               <forkCount>1</forkCount>
+               <argLine>--enable-preview</argLine>
             </configuration>
          </plugin>
+
       </plugins>
    </build>
 
-
    <properties>
-      <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
-      <maven.compiler.source>21</maven.compiler.source>
-      <maven.compiler.target>21</maven.compiler.target>
+      <maven.compiler.source.version>21</maven.compiler.source.version>
+      <maven.compiler.target.version>21</maven.compiler.target.version>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
+
 </project>
